Proyecto inicial, con configuraciones de footer, header, se crea modulo character

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,13 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@app/*":["src/app/*"],
+      "@character/*":["src/app/character/*"],
+      "@environment/*":["src/environments/*"],
+      "@shared/*":["src/app/shared/*"],
+      "@material/*":["src/app/material/*"]
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
